--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <article>
-      <h1 class="heading">Converse Chuck Taylor All Star Low Top</h1>
-      <img src="challenges.jpg" alt="low top pic" width="200" height="200" />
-      <p class="price"><strong>$65.00</strong></p>
-      <p class="shipping">Free shipping</p>
-      <p>
-        Ready to dress up or down, these classic canvas Chucks are an everyday
-        wardrobe staple.
-      </p>
-      <a href="#" class="more">More information &rarr;</a>
-      <h2 class="heading2">Product details</h2>
-      <ul class="listelements">
-        <li>Lightweight, durable canvas sneakers</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch.</li>
-      </ul>
-      <button class="button">Add to cart</button>
-    </article>
+    <div class="container">
+      <article class="product">
+        <h1 class="heading">Converse Chuck Taylor All Star Low Top</h1>
+        <img src="challenges.jpg" alt="low top pic" width="200" height="200" />
+        <p class="price"><strong>$65.00</strong></p>
+        <p class="shipping">Free shipping</p>
+        <p>
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+        <a href="#" class="more">More information &rarr;</a>
+        <h2 class="heading2">Product details</h2>
+        <ul class="listelements">
+          <li>Lightweight, durable canvas sneakers</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch.</li>
+        </ul>
+        <button class="button">Add to cart</button>
+      </article>
+    </div>
   </body>
 </html>
