--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
         <img src="challenges.jpg" alt="low top pic" width="200" height="200" />
         <p class="price"><strong>$65.00</strong></p>
         <p class="shipping">Free shipping</p>
+        <p class="saletag">Sale</p>
         <p>
           Ready to dress up or down, these classic canvas Chucks are an everyday
           wardrobe staple.
         </p>
         <a href="#" class="more">More information &rarr;</a>
+        <div class="boxes">
+          <div class="box-black"></div>
+          <div class="box-red"></div>
+          <div class="box-blue"></div>
+          <div class="box-yellow"></div>
+          <div class="box-brown"></div>
+          <div class="box-green"></div>
+        </div>
         <h2 class="heading2">Product details</h2>
         <ul class="listelements">
           <li>Lightweight, durable canvas sneakers</li>
